Closed Bug 1890593 Opened 1 year ago Closed 1 year ago

breakage after "button to allow WPAD while using system proxy settings" (#621429)

Categories

(Core :: Networking: Proxy, defect, P2)

Firefox 125
All
FreeBSD
defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- unaffected
firefox125 --- wontfix
firefox126 --- fixed

People

(Reporter: cmt, Assigned: cmt)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:125.0) Gecko/20100101 Firefox/125.0

Steps to reproduce:

In #62149 - https://hg.mozilla.org/releases/mozilla-release/rev/57b8feadc07203af4c975bd419bbfd7a537b921a#l8.58 - we call nsUnixSystemProxySettings::GetSystemWPADSetting() from toolkit/system/unixproxy/nsUnixSystemProxySettings.cpp , but that is not built when MOZ_ENABLE_LIBPROXY is set.
We have a report of breakage which can only be explained by this - see https://lists.freebsd.org/archives/dev-commits-ports-all/2024-April/109479.html
On a first hunch I'd suggest moving GetSystemWPADSetting() into common code, but maybe someone has a better idea - I'll have to try to much unraveling this will cause.

Keywords: regression
OS: Unspecified → FreeBSD
Regressed by: 621429
Hardware: Unspecified → All
Component: Untriaged → Networking: Proxy
Product: Firefox → Core

:dotoole, since you are the author of the regressor, bug 621429, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(dotoole)
Attached patch patch-bug1890593Splinter Review

After reviewing the relevant function, I decided that it was just too trivial to justify it's own file, so here's a patch which just copies it. Looks like that was all it took to fix the issue.

Thanks for investigating and writing the patch. Do you mind submitting it to phabricator, which is our current patch submitting pipeline?

Info on how to use phabricator: https://moz-conduit.readthedocs.io/en/latest/phabricator-user.html

Flags: needinfo?(cmt)

Thank you!

Severity: -- → S3
Flags: needinfo?(dotoole)
Priority: -- → P2

In #621429 a call to nsUnixSystemProxySettings::GetSystemWPADSetting()
was added, but that function is not available for builds with
MOZ_ENABLE_LIBPROXY. The funtion is trivial enough to just
copy it across - else there'd more boilerplate than actual code.

(In reply to Manuel Bucher [:manuel] from comment #3)

Thanks for investigating and writing the patch. Do you mind submitting it to phabricator, which is our current patch submitting pipeline?

Info on how to use phabricator: https://moz-conduit.readthedocs.io/en/latest/phabricator-user.html

That maybe just happened.

Flags: needinfo?(cmt)
Assignee: nobody → cmt
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Whiteboard: [necko-triaged]
Pushed by rjesup@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/15006906e885 GetSystemWPADSetting for libproxy-enabled builds r=jesup

Set release status flags based on info from the regressing bug 621429

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch

The patch landed in nightly and beta is affected.
:cmt, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox125 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(cmt)

(In reply to BugBot [:suhaib / :marco/ :calixte] from comment #10)

The patch landed in nightly and beta is affected.
:cmt, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox125 to wontfix.

For more information, please visit BugBot documentation.

On the one hand I think this is not that important - affects only non-default build configuration (MOZ_ENABLE_LIBPROXY) - even if it carries about no specific risks. On the other hand it looks like I'm not allowed to set this "wontfix". You decide :)

Flags: needinfo?(cmt)

I agree about backporting. People hitting this can cherry-pick the patch if needed.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: