Bug 1890593 - GetSystemWPADSetting for libproxy-enabled builds r=jesup

In #621429 a call to nsUnixSystemProxySettings::GetSystemWPADSetting()
was added, but that function is not available for builds with
MOZ_ENABLE_LIBPROXY. The funtion is trivial enough to just
copy it across - else there'd more boilerplate than actual code.

Differential Revision: https://phabricator.services.mozilla.com/D207197